<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/f_challenge_details_toolbar"
            style="@style/Theme.Test.ToolBar.Back"
            android:layout_width="0dp"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/purple_200"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:title="Some text" />

        <com.test.presentation.view.TableView
            android:id="@+id/f_challenge_details_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin4"
            android:paddingHorizontal="@dimen/margin16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/f_challenge_details_toolbar"
            app:tbv_title="@string/title" />

        <com.test.presentation.view.TableView
            android:id="@+id/f_challenge_details_url"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin4"
            android:paddingHorizontal="@dimen/margin16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/f_challenge_details_name"
            app:tbv_title="@string/url" />

        <com.test.presentation.view.TableView
            android:id="@+id/f_challenge_details_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin4"
            android:paddingHorizontal="@dimen/margin16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/f_challenge_details_url"
            app:tbv_title="@string/description" />

        <com.test.presentation.view.TableView
            android:id="@+id/f_challenge_details_totalAttempts"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin4"
            android:paddingHorizontal="@dimen/margin16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/f_challenge_details_description"
            app:tbv_title="@string/totalAttempts" />

        <com.test.presentation.view.TableView
            android:id="@+id/f_challenge_details_totalCompleted"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin4"
            android:paddingHorizontal="@dimen/margin16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/f_challenge_details_totalAttempts"
            app:tbv_title="@string/totalCompleted" />

        <com.test.presentation.view.TableView
            android:id="@+id/f_challenge_details_totalStars"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin4"
            android:paddingHorizontal="@dimen/margin16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/f_challenge_details_totalCompleted"
            app:tbv_title="@string/totalStars" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>